--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,6 @@
+<head>
+  <link href='https://fonts.googleapis.com/css?family=Luckiest Guy' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Annie Use Your Telescope' rel='stylesheet'>
+
+</head>
 <my-app>loading</my-app>
