--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,17 @@
 <head>
+<link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet"
   />
   <link
+  href="https://fonts.googleapis.com/css?family=Annie Use Your Telescope"
+  rel="stylesheet"
+/>
+  <link
     href="https://fonts.googleapis.com/css?family=Luckiest Guy"
     rel="stylesheet"
   />
-  <link
-    href="https://fonts.googleapis.com/css?family=Annie Use Your Telescope"
-    rel="stylesheet"
-  />
+
 </head>
 <my-app>loading</my-app>
